syntax = "proto3";
import "common.proto";
option cc_generic_services = true;

message EnterSeceneC2SRequest
{
  uint64 scene_id = 1;
}

message EnterSeceneC2SResponse
{
	ClientError error = 1;
}

message EnterSeceneS2C
{
  uint64 scene_id = 1;
  uint32 scene_confid = 2;
}

service ClientPlayerSceneService 
{
  rpc EnterScene (EnterSeceneC2SRequest) returns (EnterSeceneC2SResponse);
  rpc EnterSceneNotify (EnterSeceneS2C) returns (EnterSeceneS2C);
}